rns-lang/tests/snapshots/lexer-directives-dot_integer.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
.42 42 42 42 42


42 42 42 42 42
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/lexer/directives/dot_integer.ja:2:1 ]
   │
 2 │ .42 42 42 42 42
   │ ─┬─  
   │  ╰─── Unknown directive '.42'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
